[project]
name = "talkingdb-helpers"
version = "1.0.0"
description = "Shared domain helpers for TalkingDB ecosystem"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [{ include = "talkingdb" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

bcrypt = "^5.0.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "5db6dd4375c06f00e6819d242f8668d2590e6c04" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "ba0794a0395ce840b757c80ea08e75d68dc1d2be" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
